move rewards.filter after isPresent check and resolve return cached emptyList
Signed-off-by: Luis Pinto <luis.pinto@consensys.net>